# esp32-blink-idf

./: .gdbinit  .gitignore  .system-flags.txt  .system-includes.txt  99-ftdi.rules  CMakeLists.txt  Cargo.toml  Makefile  README.md  SETUP-ENVIRONMENT.md  build.rs  debug.sh  diagram.json  esp32-jtag.cfg  extract_bindgen_flags.py  gdbstub.c  idf.env  linker-wrapper.sh  linker_verbose.txt  project-export.sh  sdkconfig  sdkconfig.defaults  sdkconfig.nice  sdkconfig.old  wokwi.toml
.backup/: CMakeLists.txt  CMakeLists.txt.binggen  CMakeLists.txt.main  Cargo.toml  build.rs.bk  main.rs.servos  sdkconfig.defaults
.backup/.cargo/: config.toml
.backup/components/lx16a-servo/: CMakeLists.txt
.backup/components/lx16a-servo/src/: lx16a-servo.cpp  lx16a-servo.h  lx16a_c_wrapper.cpp  lx16a_c_wrapper.h
.backup/lx16a/: ffi.rs  mod.rs
.backup/lx16a-servo/: CMakeLists.txt.bk
.backup/main/: CMakeLists.txt  main.c  main.h
.cargo/: config.toml
components/: CMakeLists.none
components/lx16a-servo/: CMakeLists.txt  idf_component.yml  wrapper.h
components/lx16a-servo/src/: ffi.h  lx16a_c_wrapper.cpp  lx16a_c_wrapper.h
components/main/: CMakeLists.txt  idf_component.yml  main.c  main.h
components/main/includes/machine/: endian.h
src/: lib.rs  lx16a-servo.rs  lx16a_servo.rs  main.rs  servos.rs  wifi.rs
src/LX16AServo/: mod.rs
src/lewan_bus/: mod.rs
src/lx16_aservo/: mod.rs
src/lx16a/: ffi.rs  mod.rs
src/main_extern/: mod.rs
