[package]
name = "esp32-blink-idf"
version = "0.1.0"
authors = ["mcaro <marcecaro@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

# Configure as a library instead of a binary
[lib]
name = "esp32blinkirust"
crate-type = ["staticlib"]

[profile.release]
opt-level = "s"
lto = false

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
anyhow = "1.0"
# Use specific versions compatible with ESP-IDF v5.3.3
# Let esp-idf-hal and esp-idf-svc pull in their required esp-idf-sys version
esp-idf-sys = { version = "0.36.1", features = ["native"] }
esp-idf-hal = "0.45.2"
esp-idf-svc = { version = "0.51.0", features = ["experimental", "alloc"] }
cxx = "1.0"


[build-dependencies]
embuild = { version = "0.33.0"}
cmake = "0.1"
libc = "0.2"
bindgen = "0.71.1"
cc = "1.0"
cxx-build = "1.0"
uuid = { version = "1.7.0", features = ["v4"] }
serde_json = "1.0"
