[package]
name = "esp32-blink-idf"
version = "0.1.0"
authors = ["mcaro <marcecaro@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

# Now configured as a binary

[profile.release]
opt-level = "s"
lto = false

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []
experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = { version = "0.4", default-features = false }
anyhow = { version = "1.0", default-features = false }
# ESP-IDF dependencies
esp-idf-sys = { version = "0.36.1", features = ["native", "binstart"] }
esp-idf-hal = "0.45.2"
esp-idf-svc = { version = "0.51.0", features = ["experimental", "alloc"] }


[build-dependencies]
embuild = { version = "0.33.0"}



[[package.metadata.esp-idf-sys.extra_components]]
component_dirs = ["components/lx16a-servo"]     # path(s) to your extra component directories
bindings_header = "components/lx16a-servo/src/lx16a_c_wrapper.h"
bindings_module = "lx16a"

[package.metadata.esp-idf-sys.extra_components.1.remote_component]
name = "espressif/arduino-esp32"
version = "3.2.0"

# [package.metadata.esp-idf-sys.extra_components.2.remote_component]
# git = "https://github.com/madhephaestus/lx16a-servo.git"
# version = "master"



