[package]
name = "esp32-blink-idf"
version = "0.1.0"
authors = ["mcaro <marcecaro@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

# Now configured as a binary

[profile.release]
opt-level = "s"
lto = false

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []
experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = { version = "0.4", default-features = false }
anyhow = { version = "1.0", default-features = false }
# ESP-IDF dependencies
esp-idf-sys = { version = "0.36.1", features = ["native", "binstart"] }
esp-idf-hal = "0.45.2"
esp-idf-svc = { version = "0.51.0", features = ["experimental"] }

[build-dependencies]
embuild = { version = "0.33.0"}
bindgen = "0.71.1"


